--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -218,7 +218,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div
             class="card border-left-danger shadow h-100 py-2 cursor-pointer"
-            (click)="openLevelDialog()"
+            (click)="openLevelsDataDialog()"
           >
             <div class="card-body">
               <div class="row no-gutters align-items-center">
